<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="us.allok.megacont.EditActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/go_name"
        android:layout_toEndOf="@+id/btn_save" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_city"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/edt_name"
        android:layout_alignStart="@+id/edt_name"
        android:hint="@string/go_city" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edt_phone"
        android:layout_below="@+id/edt_city"
        android:layout_alignStart="@+id/edt_city"
        android:layout_marginTop="25dp"
        android:hint="@string/go_phone"
        android:nestedScrollingEnabled="false"
        android:longClickable="false"
        android:autoText="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/name"
        android:id="@+id/txt_name"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/edt_name"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/city"
        android:id="@+id/txt_city"
        android:layout_alignTop="@+id/edt_city"
        android:layout_alignEnd="@+id/txt_name"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/phone"
        android:id="@+id/txt_phone"
        android:layout_alignTop="@+id/edt_phone"
        android:layout_alignEnd="@+id/txt_city"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical" />

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/action_add"
        android:id="@+id/btn_save"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/edt_phone" />

</RelativeLayout>
